// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextGroup renders RTL styling 1`] = `
<div
  className="c-txt is-rtl "
  data-garden-id="textfields.text_group"
  data-garden-version="version"
/>
`;

exports[`TextGroup renders default styling 1`] = `
<div
  className="c-txt "
  data-garden-id="textfields.text_group"
  data-garden-version="version"
/>
`;

exports[`TextGroup renders inline styling if provided 1`] = `
<div
  className="c-txt c-txt--inline "
  data-garden-id="textfields.text_group"
  data-garden-version="version"
/>
`;
